# dawn

./: .gitmodules  CMakeLists.txt  Makefile  README.md  build.bat  dobuild.bat  install.ps1
.github/workflows/: build.yml  release.yml
src/: dawn.c  dawn_app.h  dawn_args.c  dawn_args.h  dawn_backend.c  dawn_backend.h  dawn_backend_posix.c  dawn_backend_web.c  dawn_backend_win32.c  dawn_block.c  dawn_block.h  dawn_chat.c  dawn_clipboard.c  dawn_compat.c  dawn_compat.h  dawn_crdt.c  dawn_crdt.h  dawn_date.c  dawn_date.h  dawn_file.c  dawn_file.h  dawn_fm.c  dawn_fm.h  dawn_footnote.c  dawn_footnote.h  dawn_gap.c  dawn_history.c  dawn_history.h  dawn_image.c  dawn_image.h  dawn_input.c  dawn_input.h  dawn_md.c  dawn_md.h  dawn_modal.c  dawn_modal.h  dawn_nav.c  dawn_nav.h  dawn_render.c  dawn_render.h  (+24 more)
src/highlight/: highlight.c  highlight.h
src/highlight/lang/: bash.c  c.c  go.c  java.c  js.c  py.c  rust.c  ts.c
tests/: test_block.c
